--- a/recovery/root/init.recovery.usb.rc
+++ b/recovery/root/init.recovery.usb.rc
@@ -33,8 +33,8 @@ on fs
     write /config/usb_gadget/g1/os_desc/use 1
     write /config/usb_gadget/g1/strings/0x409/serialnumber ${ro.serialno}
     write /config/usb_gadget/g1/strings/0x409/manufacturer ${ro.product.manufacturer}
-#    write /config/usb_gadget/g1/strings/0x409/product ${ro.product.model}
-    write /config/usb_gadget/g1/strings/0x409/product "Android ADB Interface"
+    write /config/usb_gadget/g1/strings/0x409/product ${ro.product.model}
+#    write /config/usb_gadget/g1/strings/0x409/product "Android ADB Interface"
     mkdir /config/usb_gadget/g1/functions/mass_storage.usb0
     mkdir /config/usb_gadget/g1/functions/ffs.adb
     mkdir /config/usb_gadget/g1/functions/ffs.mtp
@@ -58,6 +58,7 @@ on fs
     write /sys/module/xhci_hcd/parameters/dpidle_fs_max 0
     write /sys/module/xhci_hcd/parameters/dpidle_hs_max 0
 
+on boot
     # for usb otg sdcard hot plug detection
     write /sys/module/block/parameters/events_dfl_poll_msecs 1000
 
