--- a/.github/workflows/New_twrp.yml
+++ b/.github/workflows/New_twrp.yml
@@ -67,7 +67,7 @@ jobs:
               PATH=~/bin:$PATH
               cd twrp
               export ALLOW_MISSING_DEPENDENCIES=true && source build/envsetup.sh &&lunch twrp_CI8n-eng && mka $TARGET -j$(nproc --all)
-              cp  out/target/product/CI8n/boot.img    out/target/product/CI8n/boot-TECNO-CI8n-A12-$(date +"%Y%m%d-noCrypt").img  
+              cp  out/target/product/CI8n/boot.img    out/target/product/CI8n/boot-TECNO-CI8n-A12_V1668_noCrypt").img  
              
        - name: Release recovery image
          uses: softprops/action-gh-release@v1
@@ -75,7 +75,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.TEST }}
          with:
           tag_name: TECNO_Camon_19_Pro-CI8n
-          name: TWRP37x_12
+          name: TWRP37x_12_V1668
           files: | 
             twrp/out/target/product/CI8n/boot*.img
             twrp/out/target/product/CI8n/ramdisk*.img
