--- a/.github/workflows/New2_twrp.yml
+++ b/.github/workflows/New2_twrp.yml
@@ -86,15 +86,14 @@ jobs:
        PATH=~/bin:$PATH
        cd twrp
        export ALLOW_MISSING_DEPENDENCIES=true && source build/envsetup.sh &&lunch twrp_CI8n-eng && mka $TARGET -j$(nproc --all)
-       cp  out/target/product/CI8n/boot.img    out/target/product/CI8n/boot-TECNO_CI8n-A13-noCrypt.img
+       cp  out/target/product/CI8n/boot.img    out/target/product/CI8n/boot-TECNO-CI8n-A13-noCrypt.img
              
     - name: Release recovery image
       uses: softprops/action-gh-release@v1
       env:
        GITHUB_TOKEN: ${{ secrets.TEST }}
       with:
-       tag_name: TECNO_Camon_19_Pro-CI8n
+       tag_name: TECNO_Camon_19_Pro-CI8n_A13
        name: TWRP37x_13_V433
        files: | 
          twrp/out/target/product/CI8n/boot*.img
-         twrp/out/target/product/CI8n/ramdisk*.img
