--- a/.github/workflows/New2_twrp.yml
+++ b/.github/workflows/New2_twrp.yml
@@ -121,7 +121,9 @@ jobs:
     - name: Apply custom diff.patch
       if: github.event.inputs.APPLYPATCH == 'true'
       run: |
-        bash home/runner/work/twrp_device_tecno_CI8n/twrp_device_tecno_CI8n/twrp/${{ github.event.inputs.DT_PATH }}/patches/apply-patches.sh
+       PATH=~/bin:$PATH
+       cd twrp
+        bash ${{ github.event.inputs.DT_PATH }}/patches/apply-patches.sh
       working-directory: ${{ steps.pwd.outputs.workspace-folder }}
       continue-on-error: false
 
