--- a/.github/workflows/New2_twrp.yml
+++ b/.github/workflows/New2_twrp.yml
@@ -1,44 +1,44 @@
 name: Building TWRP
 
 on:
-#  release:
-#    types: [published]
-#  push:
-#    branches:
-#      - master
-#    paths:
-#      - '.config'
-#  schedule:
-#    - cron: 0 8 * * 5
   workflow_dispatch:
-  
     inputs:
-      MANIFEST:
-        description: 'MANIFEST'
+      MANIFEST_URL:
+        description: 'MANIFEST_URL (if want to use SSH keys, use git@github.com:XXXXX)'
         required: true
         default: 'https://github.com/minimal-manifest-twrp/platform_manifest_twrp_aosp'
       MANIFEST_BRANCH:
         description: 'MANIFEST_BRANCH'
         required: true
         default: 'twrp-12.1'
-      DEVICE:
-        description: 'DEVICE'
-        required: true
-        default: 'CI8n'
-      DT_LINK:
-        description: 'DT_LINK'
+      DEVICE_TREE_URL:
+        description: 'DEVICE_TREE_URL'
         required: true
         default: 'https://github.com/lopestom/twrp_device_tecno_CI8n'
-      DT_PATH:
-        description: 'DT_PATH'
+      DEVICE_TREE_BRANCH:
+        description: 'DEVICE_TREE_BRANCH'
+        required: true
+        default: 'A13_Test'
+      DEVICE_PATH:
+        description: 'DEVICE_PATH'
         required: true
         default: 'device/tecno/CI8n'
-      TARGET:
-        description: 'TARGET'
+      COMMON_PATH:
+        description: 'COMMON_PATH (if no common tree, leave blank)'
+        required: false
+      DEVICE_NAME:
+        description: 'DEVICE_NAME'
         required: true
-        default: 'bootimage'
-      TZ:
-        default: 'Asia/manila'
+        default: 'CI8n'
+      BUILD_TARGET:
+        description: 'BUILD_TARGET'
+        required: true
+        default: 'boot'
+        type: choice
+        options:
+        - recovery
+        - boot
+        - vendorboot
       APPLYPATCH:
         description: 'Apply diff.patch (true or false)'
         required: true
@@ -58,88 +58,105 @@ jobs:
     - name: Display Run Parameters
       run: |
         echo "::group::User Environment Variables"
-        echo "MANIFEST: ${{ github.event.inputs.MANIFEST }}"
+        echo "Manifest URL: ${{ github.event.inputs.MANIFEST_URL }}"
         echo "Manifest Branch: ${{ github.event.inputs.MANIFEST_BRANCH }}"
-        echo "DT_LINK: ${{ github.event.inputs.DT_LINK }}"
-        echo "DT_PATH: ${{ github.event.inputs.DT_PATH }}"
-        echo "DEVICE: ${{ github.event.inputs.DEVICE }}"
-        echo "TZ: ${{ github.event.inputs.TZ }}"
-        echo "TARGET: ${{ github.event.inputs.TARGET }}"
+        echo "Device Tree URL: ${{ github.event.inputs.DEVICE_TREE_URL }}"
+        echo "Device Tree Branch: ${{ github.event.inputs.DEVICE_TREE_BRANCH }}"
+        echo "Device Path: ${{ github.event.inputs.DEVICE_PATH }}"
+        echo "Device Name: ${{ github.event.inputs.DEVICE_NAME }}"
+        echo "Makefile Name: ${{ github.event.inputs.MAKEFILE_NAME }}"
+        echo "Build Target: ${{ github.event.inputs.BUILD_TARGET }}.img"
         echo "::endgroup::"
-
+ 
     - name: Checkout
       uses: actions/checkout@master
-
-    # You might want to Checkout your repo first, but not mandatory
+ 
     - name: Check Out
       uses: actions/checkout@v3
-    # Cleanup The Actions Workspace Using Custom Composite Run Actions
+
     - name: Cleanup
       uses: rokibhasansagar/slimhub_actions@main
-      # That's it! Now use your normal steps
-
+ 
     - name: Prepare the environment
       run: |
-       sudo apt update
-       sudo apt -y upgrade
-       sudo apt -y install gperf gcc-multilib gcc-10-multilib g++-multilib g++-10-multilib libc6-dev lib32ncurses5-dev x11proto-core-dev libx11-dev tree lib32z-dev libgl1-mesa-dev libxml2-utils xsltproc bc ccache lib32readline-dev lib32z1-dev liblz4-tool libncurses5-dev libsdl1.2-dev libwxgtk3.0-gtk3-dev libxml2 lzop pngcrush schedtool squashfs-tools imagemagick libbz2-dev lzma ncftp qemu-user-static libstdc++-10-dev libncurses5 python
-       git config --global user.name "lopestom"
-       git config --global user.email "guillopes2002@gmail.com"
+        sudo apt update
+        sudo apt -y upgrade
+        sudo apt -y install gperf gcc-multilib gcc-10-multilib g++-multilib g++-10-multilib libc6-dev lib32ncurses5-dev x11proto-core-dev libx11-dev tree lib32z-dev libgl1-mesa-dev libxml2-utils xsltproc bc ccache lib32readline-dev lib32z1-dev liblz4-tool libncurses5-dev libsdl1.2-dev libwxgtk3.0-gtk3-dev libxml2 lzop pngcrush schedtool squashfs-tools imagemagick libbz2-dev lzma ncftp qemu-user-static libstdc++-10-dev libncurses5 python
         
     - name: Install OpenJDK
       uses: actions/setup-java@v3
       with:
         distribution: 'zulu'
         java-version: '8'
- 
+
     - name: Install repo
       run: |
         mkdir ~/bin
         curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
         chmod a+x ~/bin/repo
         sudo ln -sf ~/bin/repo /usr/bin/repo
-
-    - name: Sync recovery source and device tree
+      
+    - name: Initialize repo
       run: |
-       PATH=~/bin:$PATH
-       mkdir twrp
-       cd twrp
-       repo init -u ${{ github.event.inputs.MANIFEST }} -b ${{ github.event.inputs.MANIFEST_BRANCH }} --depth=1
-       repo sync -c -j8 --force-sync --no-clone-bundle --no-tags
-       rm -rf .repo
+        mkdir workspace
+        cd workspace
+        echo "workspace-folder=$(pwd)" >> $GITHUB_OUTPUT
+        git config --global user.name "lopestom"
+        git config --global user.email "guillopes2002@gmail.com"
+        repo init --depth=1 -u ${{ github.event.inputs.MANIFEST_URL }} -b ${{ github.event.inputs.MANIFEST_BRANCH }}
+      id: pwd
+          
+    - name: Repo Sync
+      run: |
+        repo sync -j$(nproc --all) --force-sync
+      working-directory: workspace
+      
+    - name: Clone device tree
+      run: |
+        git clone ${{ github.event.inputs.DEVICE_TREE_URL }} -b ${{ github.event.inputs.DEVICE_TREE_BRANCH }} ./${{ github.event.inputs.DEVICE_PATH }}
+      working-directory: ${{ steps.pwd.outputs.workspace-folder }}
+
+    - name: Clone common tree
+      if: |
+        github.event.inputs.COMMON_TREE_URL != null
+        && github.event.inputs.COMMON_PATH != null
+      run: |
+        git clone ${{ github.event.inputs.COMMON_TREE_URL }} -b ${{ github.event.inputs.DEVICE_TREE_BRANCH }} ./${{ github.event.inputs.COMMON_PATH }}
+      working-directory: ${{ steps.pwd.outputs.workspace-folder }}
 
     - name: Checkout device tree
       uses: actions/checkout@v2
       with:
-       path: twrp/device/tecno/CI8n
+       path: ${GITHUB_WORKSPACE}/workspace/${{ github.event.inputs.DEVICE_PATH }}
 
     - name: Set Swap Space
       uses: pierotofy/set-swap-space@master
       with:
-       swap-size-gb: 12
+        swap-size-gb: 12
 
     - name: Apply custom diff.patch
       if: github.event.inputs.APPLYPATCH == 'true'
       run: |
-       PATH=~/bin:$PATH
-       cd twrp
-        bash ${{ github.event.inputs.DT_PATH }}/patches/apply-patches.sh
+        bash ${GITHUB_WORKSPACE}/workspace/${{ github.event.inputs.DEVICE_PATH }}/patches/apply-patches.sh
       working-directory: ${{ steps.pwd.outputs.workspace-folder }}
-      continue-on-error: false
+      continue-on-error: true
 
-    - name: Build
+    - name: Building recovery
       run: |
-       PATH=~/bin:$PATH
-       cd twrp
-       export ALLOW_MISSING_DEPENDENCIES=true && source build/envsetup.sh &&lunch twrp_CI8n-eng && mka $TARGET -j$(nproc --all)
-       cp  out/target/product/CI8n/boot.img    out/target/product/CI8n/boot-TECNO-CI8n-A13-noCrypt.img
-             
-    - name: Release recovery image
+        source build/envsetup.sh
+        export ALLOW_MISSING_DEPENDENCIES=true
+        lunch twrp_${{ github.event.inputs.DEVICE_NAME }}-eng && make clean && make ${{ github.event.inputs.BUILD_TARGET }}image -j$(nproc --all)
+      working-directory: ${{ steps.pwd.outputs.workspace-folder }}
+
+    - name: Upload to Release
       uses: softprops/action-gh-release@v1
-      env:
-       GITHUB_TOKEN: ${{ secrets.TEST }}
       with:
-       tag_name: TECNO_Camon_19_Pro-CI8n_A13
-       name: TWRP37x_13_V433
-       files: | 
-         twrp/out/target/product/CI8n/boot*.img
+        files: workspace/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/${{ github.event.inputs.BUILD_TARGET }}.img
+        name: ${{ github.event.inputs.DEVICE_NAME }}-${{ github.run_id }}
+        tag_name: ${{ github.run_id }}
+        body: |
+          Manifest: ${{ github.event.inputs.MANIFEST_BRANCH }}
+          Device: ${{ github.event.inputs.DEVICE_NAME }}
+          Target: ${{ github.event.inputs.BUILD_TARGET }}.img
+      env:
+        GITHUB_TOKEN: ${{ secrets.TEST }}
