--- a/.github/workflows/New2_twrp.yml
+++ b/.github/workflows/New2_twrp.yml
@@ -111,7 +111,8 @@ jobs:
     - name: Checkout device tree
       uses: actions/checkout@v2
       with:
-       path: ${GITHUB_WORKSPACE}/${{ github.event.inputs.DEVICE_PATH }}
+       path: ./${{ github.event.inputs.DEVICE_PATH }}
+
 
     - name: Set Swap Space
       uses: pierotofy/set-swap-space@master
