--- a/.github/workflows/New2_twrp.yml
+++ b/.github/workflows/New2_twrp.yml
@@ -124,7 +124,7 @@ jobs:
       run: |
         bash workspace/${{ github.event.inputs.DEVICE_PATH }}/patches/apply-patches.sh
       working-directory: ${{ steps.pwd.outputs.workspace-folder }}
-      continue-on-error: true
+      continue-on-error: false
 
     - name: Building recovery
       run: |
